syntax = "proto3";
import "hello.proto";

option java_multiple_files = true;
option java_package = "com.guagua.proto.hello";
option java_outer_classname = "HelloServiceProto";
package hello;



service HelloService {
  rpc Say(HelloRequest) returns (HelloResponse);
}